<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ProdDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/editor_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/name_textholder"
                android:inputType="textCapWords" />

            <LinearLayout
                android:id="@+id/container_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quantity_text_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_list_item"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="@dimen/padding_left_small"
                    android:text="@string/quantity_text"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/padding_quantity_number"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/quantity_textholder"
                    android:inputType="textCapWords"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Button
                    android:id="@+id/decrease"
                    android:layout_width="@dimen/increase_decrease_button_width"
                    android:layout_height="@dimen/increase_decrease_button_height"
                    android:background="@drawable/button_style1"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_decrease" />

                <Button
                    android:id="@+id/increase"
                    android:layout_width="@dimen/increase_decrease_button_width"
                    android:layout_height="@dimen/increase_decrease_button_height"
                    android:layout_marginLeft="@dimen/space_between_buttons"
                    android:background="@drawable/button_style1"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/button_increase" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/price"
                    style="@style/EditorFieldStyle"
                    android:layout_weight="1"
                    android:hint="@string/price_textholder"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/price_currency" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_data" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/input_padding_left">


            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_name_textholder"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_phone_number"
                android:inputType="number" />

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_style1"
                android:text="@string/button_order" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>