<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/product_name"
            tools:text="@string/name_textholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_price_and_quantity"
                android:fontFamily="sans-serif"
                android:text="@string/quantity_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginEnd="@dimen/margin_end_list_item"
                android:textColor="@android:color/black"
                tools:text="@string/quantity_textholder" />

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_price_and_quantity"
                android:fontFamily="sans-serif"
                android:text="@string/price_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginEnd="@dimen/margin_price_and_quantity"
                android:textColor="@android:color/black"
                tools:text="@string/price_textholder" />

            <TextView
                android:id="@+id/price_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/price_currency"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/margin_right_sale_button"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerVertical="true"
        android:background="@drawable/button_style1"
        android:textColor="@android:color/black"
        android:text="@string/sale_button" />
</LinearLayout>